<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailsHirosActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivImgDetail"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_marginBottom="10dp"
                android:background="@color/gray"
                android:contentDescription="@string/descriptions"
                android:scaleType="centerCrop"
                tools:ignore="ImageContrastCheck"
                tools:src="@drawable/placehoredr_photo" />

            <TextView
                android:id="@+id/tvTitleDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivImgDetail"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:layout_toStartOf="@+id/tvRetingDetail"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:text="@string/title_hiros" />

            <TextView
                android:id="@+id/tvRetingDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/ivImgDetail"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:drawableStartCompat="@drawable/ic_baseline_star_24"
                tools:text="@string/_4_0" />

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvTitleDetail"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="21dp"
                android:text="@string/about" />

            <TextView
                android:id="@+id/tvDecriptionDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tvAbout"
                android:layout_marginLeft="21dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="16dp"
                android:justificationMode="inter_word"
                android:textColor="@color/black"
                android:textSize="12sp"
                tools:text="@string/descriptions" />

            <View
                android:id="@+id/strut"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_centerHorizontal="true" />

            <TextView
                android:id="@+id/tvPlatformView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDecriptionDetail"
                android:layout_alignEnd="@id/strut"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:text="@string/platform" />

            <TextView
                android:id="@+id/tvMetascoreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDecriptionDetail"
                android:layout_alignStart="@id/strut"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:text="@string/metascore" />

            <TextView
                android:id="@+id/tvPlatform"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPlatformView"
                android:layout_alignEnd="@id/strut"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                tools:text="@string/platform" />

            <TextView
                android:id="@+id/tvMetascore"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMetascoreView"
                android:layout_alignStart="@id/strut"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                tools:text="@string/metascore" />

            <TextView
                android:id="@+id/tvGenreView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvPlatform"
                android:layout_alignEnd="@id/strut"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:text="@string/genre" />

            <TextView
                android:id="@+id/tvRealiseDateView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvMetascore"
                android:layout_alignStart="@id/strut"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:text="@string/realise_date" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGenreView"
                android:layout_alignEnd="@id/strut"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                tools:text="@string/genre" />

            <TextView
                android:id="@+id/tvRealiseDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvRealiseDateView"
                android:layout_alignStart="@id/strut"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                tools:text="@string/realise_date" />

            <TextView
                android:id="@+id/tvDeveloverView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvGenre"
                android:layout_alignParentEnd="true"
                android:layout_alignParentStart="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:text="@string/develover" />

            <TextView
                android:id="@+id/Develover"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvDeveloverView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginLeft="21dp"
                android:layout_marginRight="21dp"
                android:layout_marginBottom="16dp"
                android:textColor="@color/black"
                tools:text="@string/develover" />

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>